Changes for Perl Application Development and Refactoring Environment

0.53 To Be Released

0.52 2009.12.14
    - Add a plugin hook on change of current editor tab (SEWI)
    - Show the svn revision of Padre's start time at the title bar&about dialog,
      not the current one (SEWI)
    - Fixed: Padre command line arguments work again when using dev.pl (SEWI)
    - Fixed: Menu options get disabled/enabled as needed again, this also
      fixed ticket #742, #762, #764 and #771 (SEWI)
    - Alt-Left and Alt-Right switch to the neighbor panels which Ctrl-Tab
      uses the last-used order (SEWI)
    - Fix: Double click on the function list jumps to the sub (again) now (SEWI)
    - Added "Save Intution" to the File menu, to automatically save a new
      file wherever Padre is confident it is appropriate (ADAMK)
    - New file creation is now driven by Template Toolkit templates (using
      Template::Tiny). This should allow even basic new file creation to be
      somewhat adaptive to the user or project context (ADAMK)
    - Padre speedup: Limit number of menu bar refreshs (SEWI)
    - Fixed ticket #790: Ctrl + Caps Lock reduces font size (AZAWAWI)
    - Re-enabled toggle status bar on win32 (AZAWAWI)
    - Fixed ticket #750: Ctrl-Tab works again (WAXHEAD, SEWI)
    - Fixed Padre crash in Module Tools/Install Locale/Module/CPAN config (AZAWAWI)
    - Open Resource restarts search now when project directory or Padre's 
      current directory changes (AZAWAWI)

0.51 2009.12.06
    - Find all option showing all matches in bottom tab (CODE4PAY)
    - Improved FTP error handling (SEWI)
    - Open URLs from command line (SEWI)
    - Configurable location of the 'perltags' file for autocompletion (SEWI)
    - Fixed ticket #419: find variable declaration does not work at the end of
      a variable (PATRICKAS)
    - Fixed ticket #654: Lexical Rename of Variable - Can't highlight the
      whole variable (PATRICKAS)